# gpemu2

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  gpemu2.cabal
Libretro/: CFFI.hs  Core.hs  Downloader.hs
exe/: Main.hs
tests/: Properties.hs  Tests.hs
tests/roms/atari2600/: sheepitup_ntsc.a26
